# textmenu

./: Cargo.toml  LICENSE  README.md  sonar-project.properties
.github/workflows/: ci.yml
src/: basic_menu_item.rs  console.rs  consts.rs  keyboard.rs  keyboard_adapter.rs  lib.rs  main.rs  menu.rs  menu_item.rs  menu_item_enum.rs
src/keyboards/: mod.rs
src/menu_items/: action_menu_item.rs  basic_menu_item.rs  list_menu_item.rs  menu_item.rs  menu_item_enum.rs  menu_item_kind.rs  mod.rs  range_menu_item.rs  submenu_menu_item.rs  toggle_menu_item.rs
src/renderer/: mod.rs  string_renderer.rs
src/renderers/: console.rs
