[package]
name = "textmenu"
version = "0.1.0"
edition = "2021"
keywords = ["lcd", "menu"]
categories = ["embedded", "gui", "no-std", "no-std::no-alloc"]
authors = [
    "Adrian Tello Lasheras <adriantl7@gmail.com>",
]
license = "MIT"

[dependencies]

[features]
default = [
    "action_menu_item",
    "basic_menu_item",
    "list_menu_item",
    "range_menu_item",
    "toggle_menu_item"
]
action_menu_item = []
basic_menu_item = []
list_menu_item = []
range_menu_item = []
toggle_menu_item = []